--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,23 @@
-dist
-dist-*
+.direnv
 
-*.o
-*.hi
-*.hie
+node_modules
 
-_cache
-_site
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
